--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@codesandbox/sdk": "^0.11.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "@stackblitz/sdk": "^1.11.0",
     "@tailwindcss/vite": "^4.0.14",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.4",
