--- a/fe/package.json
+++ b/fe/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@codesandbox/sdk": "^0.11.1",
     "@cometchat-pro/chat": "^3.0.13",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@stackblitz/sdk": "^1.11.0",
     "@tailwindcss/vite": "^4.0.14",
     "@vitejs/plugin-react": "^4.3.4",
@@ -24,6 +27,7 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
