--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@codesandbox/sdk": "^0.11.1",
     "@cometchat-pro/chat": "^3.0.13",
+    "@dytesdk/react-web-core": "^2.4.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -31,7 +32,8 @@
     "react-router-dom": "^7.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "zego-express-engine-webrtc": "^3.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
