feat: refactor the landing and other pages

--- a/fe/package.json
+++ b/fe/package.json
@@ -13,32 +13,44 @@
     "@codesandbox/sdk": "^0.11.1",
     "@cometchat-pro/chat": "^3.0.13",
     "@dytesdk/react-web-core": "^2.4.3",
+    "@liveblocks/client": "^2.22.0",
+    "@liveblocks/react": "^2.22.0",
+    "@liveblocks/yjs": "^2.22.0",
+    "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@stackblitz/sdk": "^1.11.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@types/date-fns": "^2.5.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.1-beta",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.483.0",
+    "next-themes": "^0.4.6",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tw-animate-css": "^1.2.4",
+    "y-monaco": "^0.1.6",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.24",
     "zego-express-engine-webrtc": "^3.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
