--- a/fe/package.json
+++ b/fe/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@stackblitz/sdk": "^1.11.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@types/axios": "^0.9.36",
     "@types/date-fns": "^2.5.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.1-beta",
