--- a/fe/package.json
+++ b/fe/package.json
@@ -37,6 +37,7 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
