--- a/fe/package.json
+++ b/fe/package.json
@@ -19,8 +19,11 @@
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@stackblitz/sdk": "^1.11.0",
     "@tailwindcss/vite": "^4.0.14",
@@ -36,6 +39,7 @@
     "next-themes": "^0.4.6",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
